<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="2dp"
    android:paddingEnd="@dimen/popup_margin"
    android:paddingStart="@dimen/popup_margin"
    android:paddingTop="@dimen/popup_margin_top">

    <ImageView
        android:layout_height="130dp"
        android:layout_width="130dp"
        android:src="@drawable/ic_exit" />

    <TextView
        style="@style/PopUpText"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/popup_padding"
        android:layout_width="wrap_content"
        android:text="@string/exit_or_logout"
        tools:text="Exit or Logout" />


    <TextView
        style="@style/BottomButtonsText"
        android:background="@drawable/background_bottom_send"
        android:gravity="center"
        android:id="@+id/tv_exit"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/popup_margin"
        android:layout_width="@dimen/popup_btn_width"
        android:padding="@dimen/popup_margin"
        android:text="@string/exit_app"
        tools:text="Exit App" />

    <TextView
        style="@style/PriceCountText"
        android:background="@drawable/background_bottom_cancel"
        android:gravity="center"
        android:id="@+id/tv_logout"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_width="@dimen/popup_btn_width"
        android:padding="@dimen/popup_margin"
        android:text="@string/logout"
        android:textColor="@color/mine_shaft_light_2D2D2D"
        tools:text="Logout" />

</LinearLayout>