<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_new_filled"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">


        <TextView
            style="@style/TextStyle26"
            android:id="@+id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="26dp"
            android:text="@string/order_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Order Date" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv_title"
            android:layout_width="wrap_content"
            android:padding="13dp"
            android:src="@drawable/ic_icon_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:background="@drawable/background_new"
        android:gravity="center"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TextView
                style="@style/TitleTimesText"
                android:id="@+id/tv_title_start"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_width="wrap_content"
                android:text="@string/start"
                app:layout_constraintEnd_toEndOf="@+id/cv_start_calendar"
                app:layout_constraintStart_toStartOf="@+id/cv_start_calendar"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="start" />

            <CalendarView
                android:id="@+id/cv_start_calendar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="26dp"
                android:layout_marginStart="13dp"
                android:layout_width="wrap_content"
                android:theme="@style/Widget.CalendarView.Custom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cv_end_calendar"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_start" />

            <!--        end calendar      -->

            <TextView
                style="@style/TitleTimesText"
                android:id="@+id/tv_title_end"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_width="wrap_content"
                android:text="@string/end"
                app:layout_constraintEnd_toEndOf="@+id/cv_end_calendar"
                app:layout_constraintStart_toStartOf="@+id/cv_end_calendar"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="end" />

            <CalendarView
                android:id="@+id/cv_end_calendar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_marginStart="26dp"
                android:layout_width="wrap_content"
                android:theme="@style/Widget.CalendarView.Custom"
                app:layout_constraintEnd_toStartOf="@+id/cv_start_calendar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_end" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/TextStyle20"
            android:background="@drawable/background_add_order"
            android:gravity="center"
            android:id="@+id/tv_save"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:layout_marginBottom="26dp"
            android:layout_width="wrap_content"
            android:paddingBottom="12dp"
            android:paddingEnd="57dp"
            android:paddingStart="57dp"
            android:paddingTop="12dp"
            android:text="@string/save_details"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:text="Save details" />

    </LinearLayout>
</LinearLayout>