<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/login_logo_width"
        android:layout_height="@dimen/login_logo_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/login_margin_top"
        android:src="@drawable/bringit_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edt_username"
        android:layout_marginBottom="@dimen/padding"
        android:text="@string/login"
        android:textColor="@color/edit_text_background"
        android:textSize="@dimen/text_16"
        app:layout_constraintBottom_toTopOf="@+id/edt_username"
        app:layout_constraintEnd_toEndOf="@+id/edt_username" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_tv"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/login_margin"
        android:background="@drawable/selector_background_error"
        android:ellipsize="end"
        android:imeOptions="actionNext"
        android:lines="1"
        android:maxLines="1"
        android:padding="@dimen/padding_x2"
        android:singleLine="true"
        android:textSize="@dimen/text_16"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:text="pashtet1@gmail.com" />

    <ImageView
        android:id="@+id/iv_clear_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/edt_username"
        android:layout_alignRight="@+id/edt_username"
        android:padding="@dimen/padding_x2"
        android:src="@drawable/ic_clear"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/edt_username"
        app:layout_constraintEnd_toEndOf="@+id/edt_username"
        app:layout_constraintTop_toTopOf="@+id/edt_username"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edt_password"
        android:layout_marginBottom="@dimen/padding"
        android:text="@string/password"
        android:textColor="@color/edit_text_background"
        android:textSize="@dimen/text_16"
        app:layout_constraintBottom_toTopOf="@+id/edt_password"
        app:layout_constraintEnd_toEndOf="@+id/edt_password" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_tv"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/login_margin"
        android:background="@drawable/selector_background_error"
        android:ellipsize="end"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="@dimen/padding_x2"
        android:textSize="@dimen/text_16"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/edt_username"
        tools:text="pedro123" />

    <ImageView
        android:id="@+id/iv_clear_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/edt_password"
        android:layout_alignRight="@+id/edt_password"
        android:padding="@dimen/padding_x2"
        android:src="@drawable/ic_clear"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/edt_password"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintTop_toTopOf="@+id/edt_password"
        tools:visibility="visible" />

    <Button
        android:id="@+id/tv_go"
        android:layout_width="@dimen/login_btn_width"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/login_margin"
        android:background="@drawable/background_btn"
        android:gravity="center"
        android:padding="@dimen/padding_x2"
        android:text="@string/go"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

</androidx.constraintlayout.widget.ConstraintLayout>